// Copyright (c) .NET Foundation. All rights reserved.
// Licensed under the Apache License, Version 2.0. See License.txt in the project root for license information.

syntax = "proto3";

import "google/api/annotations.proto";

package greet;

// My amazing greeter service.
service Greeter {
  // Sends a greeting.
  rpc SayHello (HelloRequest) returns (HelloReply) {
    option (google.api.http) = {
      get: "/v1/greeter/{name}"
    };
  }
  // Sends a stream of greetings.
  rpc SayHelloStream (HelloRequestCount) returns (stream HelloReply) {
    option (google.api.http) = {
      post: "/v1/greeter"
      body: "*"
    };
  }
}

message HelloRequest {
  // Name to say hello to.
  string name = 1;
}

message HelloRequestCount {
  // Name to say hello to.
  string name = 1;
  // Count of messages to send.
  int32 count = 2;
}

message HelloReply {
  // Hello reply message.
  string message = 1;
}
